# llm-extractiion-code-artifacts

./: .env.sample  .gitignore  README.md  api.py  artifact-insertion-from-supabase.ipynb  business_analyst_agent.py  docker-compose.yaml  example.txt  extract.py  graph_linker.py  insertion.py  main.py  nodes.py  nodes_generator.py  process.py  process_invoice_pdf.py  pyproject.toml  relations.py  relationship_agent.py
.devcontainer/: Dockerfile  devcontainer.json
artifacts/: faena.txt  faena_complete_example.txt  faena_complete_example_v2.txt  faena_db_example.txt  faena_expanded.txt  faena_modified_example.txt  faena_testing_duplicates.txt
ds-lab/: 20240318-business-analyst-multi-agent.ipynb
