[project]
name = "llm-extract-artifact-information"
version = "0.1.0"
description = ""
authors = [
    { name = "Nicolás Espinoza Silva" }
]
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "openai",
    "pdfplumber",
    "pydantic",
    "python-dotenv",
    "neo4j",
    "annotated-types",
    "anyio",
    "certifi",
    "cffi",
    "charset-normalizer",
    "cryptography",
    "distro",
    "h11",
    "httpcore",
    "httpx",
    "idna",
    "jiter",
    "neo4j",
    "openai",
    "pdfminer-six",
    "pdfplumber",
    "pillow",
    "pycparser",
    "pydantic",
    "pydantic-core",
    "pypdfium2",
    "python-dotenv",
    "pytz",
    "sniffio",
    "tqdm",
    "typing-extensions",
    "fastapi",
    "uvicorn",
    "langchain",
    "langchain_community",
    "langchain_anthropic",
    "langgraph"
]

# see https://github.com/astral-sh/uv/issues/6443
[tool.setuptools.packages.find]
where = []

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
